[gd_scene load_steps=14 format=3 uid="uid://cjtb5lx13ejsn"]

[ext_resource type="Script" uid="uid://pe3ubufc2fyl" path="res://scripts/making_words_game.gd" id="1_pilkf"]
[ext_resource type="Texture2D" uid="uid://cj22v75nx3n5n" path="res://Assets/Images/making_words_bg.png" id="2_fxf0t"]
[ext_resource type="Texture2D" uid="uid://f65jlmr8kv0p" path="res://Assets/Images/SunnyWave.png" id="3_71bq5"]
[ext_resource type="Texture2D" uid="uid://cijxmqxkmek5m" path="res://Assets/Images/chemistry_5815737.png" id="4_8ptgr"]
[ext_resource type="Texture2D" uid="uid://c0hg7i7kt8gel" path="res://Assets/Images/flask_733786.png" id="5_jlgpy"]
[ext_resource type="Texture2D" uid="uid://dowe5r2msaffd" path="res://Assets/Images/flask_544310.png" id="6_ddhha"]
[ext_resource type="Texture2D" uid="uid://cj153rf717ucw" path="res://Assets/Images/beaker_7357113 (1).png" id="7_fiwpa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_word_display"]
bg_color = Color(0.8, 0.5, 0.2, 0.9)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.6, 0.3, 0.1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mixing_area"]
bg_color = Color(0.4, 0.6, 0.8, 0.3)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.2, 0.4, 0.6, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_back_button"]
bg_color = Color(0.8, 0.4, 0.2, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_next_button"]
bg_color = Color(0.2, 0.8, 0.3, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bottle"]
size = Vector2(80, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mixing_area"]
size = Vector2(400, 150)

[node name="MakingWordsGame" type="Node2D"]
script = ExtResource("1_pilkf")

[node name="Background" type="Node2D" parent="."]

[node name="LabBackground" type="Sprite2D" parent="Background"]
position = Vector2(578.5, 323.5)
scale = Vector2(0.816051, 0.811869)
texture = ExtResource("2_fxf0t")

[node name="Character" type="Node2D" parent="."]

[node name="ScientistCharacter" type="Sprite2D" parent="Character"]
position = Vector2(1013, 367)
scale = Vector2(0.3125, 0.344727)
texture = ExtResource("3_71bq5")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameTitle" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 104.0
offset_top = -1.0
offset_right = 508.0
offset_bottom = 66.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.243137, 0.145098, 0.062745, 1)
theme_override_font_sizes/font_size = 48
text = "MAKING WORDS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InstructionBubble" type="Sprite2D" parent="UI"]
position = Vector2(850, 200)
scale = Vector2(1, 0.8)
flip_h = true

[node name="InstructionText" type="Label" parent="UI/InstructionBubble"]
clip_contents = true
offset_left = -343.0
offset_top = -133.75
offset_right = -103.0
offset_bottom = -33.75
theme_override_colors/font_color = Color(0.4, 0.2, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Listen to the word, then
find the right letters!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="WordDisplayPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 268.0
offset_top = 88.0
offset_right = 508.0
offset_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_word_display")

[node name="CurrentWordLabel" type="Label" parent="UI/WordDisplayPanel"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 24.0
offset_right = -12.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Listen!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="PlayWordButton" type="Button" parent="UI/WordDisplayPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = 55.5
offset_right = 45.0
offset_bottom = 97.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "üîä Play"

[node name="MixingArea" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 500.0
offset_top = 278.0
offset_right = 950.0
offset_bottom = 458.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mixing_area")

[node name="MixingLabel" type="Label" parent="UI/MixingArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -77.0
offset_right = 106.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Mix Here!"
horizontal_alignment = 1

[node name="SpellingDisplay" type="Label" parent="UI/MixingArea"]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -20.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ScorePanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 301.0
offset_top = 234.0
offset_right = 482.0
offset_bottom = 284.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_word_display")

[node name="ScoreLabel" type="Label" parent="UI/ScorePanel"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="NavButtons" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 700.0
offset_top = 580.0
offset_right = 1100.0
offset_bottom = 630.0
grow_horizontal = 2
grow_vertical = 0

[node name="BackButton" type="Button" parent="UI/NavButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_back_button")
text = "‚Üê Back"

[node name="Spacer" type="Control" parent="UI/NavButtons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NextButton" type="Button" parent="UI/NavButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_next_button")
disabled = true
text = "Next ‚Üí"

[node name="BottleArea" type="Node2D" parent="."]
position = Vector2(150, 450)

[node name="BottleA" type="Area2D" parent="BottleArea"]

[node name="BottleASprite" type="Sprite2D" parent="BottleArea/BottleA"]
modulate = Color(1, 0.5, 0.5, 1)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_8ptgr")

[node name="BottleACollision" type="CollisionShape2D" parent="BottleArea/BottleA"]
shape = SubResource("RectangleShape2D_bottle")

[node name="BottleALabel" type="Label" parent="BottleArea/BottleA"]
offset_left = -40.0
offset_top = 70.0
offset_right = 40.0
offset_bottom = 110.0
theme_override_colors/font_color = Color(0.243137, 0.145098, 0.062745, 1)
theme_override_font_sizes/font_size = 32
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottleE" type="Area2D" parent="BottleArea"]
position = Vector2(120, 0)

[node name="BottleESprite" type="Sprite2D" parent="BottleArea/BottleE"]
modulate = Color(0.5, 1, 0.5, 1)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_jlgpy")

[node name="BottleECollision" type="CollisionShape2D" parent="BottleArea/BottleE"]
shape = SubResource("RectangleShape2D_bottle")

[node name="BottleELabel" type="Label" parent="BottleArea/BottleE"]
offset_left = -40.0
offset_top = 70.0
offset_right = 40.0
offset_bottom = 110.0
theme_override_colors/font_color = Color(0.243137, 0.145098, 0.062745, 1)
theme_override_font_sizes/font_size = 32
text = "E"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottleT" type="Area2D" parent="BottleArea"]
position = Vector2(240, 0)

[node name="BottleTSprite" type="Sprite2D" parent="BottleArea/BottleT"]
modulate = Color(0.5, 0.5, 1, 1)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_ddhha")

[node name="BottleTCollision" type="CollisionShape2D" parent="BottleArea/BottleT"]
shape = SubResource("RectangleShape2D_bottle")

[node name="BottleTLabel" type="Label" parent="BottleArea/BottleT"]
offset_left = -40.0
offset_top = 70.0
offset_right = 40.0
offset_bottom = 110.0
theme_override_colors/font_color = Color(0.243137, 0.145098, 0.062745, 1)
theme_override_font_sizes/font_size = 32
text = "T"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottleC" type="Area2D" parent="BottleArea"]
position = Vector2(360, 0)

[node name="BottleCSprite" type="Sprite2D" parent="BottleArea/BottleC"]
modulate = Color(1, 1, 0.5, 1)
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_fiwpa")

[node name="BottleCCollision" type="CollisionShape2D" parent="BottleArea/BottleC"]
shape = SubResource("RectangleShape2D_bottle")

[node name="BottleCLabel" type="Label" parent="BottleArea/BottleC"]
offset_left = -40.0
offset_top = 70.0
offset_right = 40.0
offset_bottom = 110.0
theme_override_colors/font_color = Color(0.243137, 0.145098, 0.062745, 1)
theme_override_font_sizes/font_size = 32
text = "C"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MixingDropZone" type="Area2D" parent="."]
position = Vector2(640, 350)

[node name="MixingCollision" type="CollisionShape2D" parent="MixingDropZone"]
position = Vector2(86, 18)
shape = SubResource("RectangleShape2D_mixing_area")
debug_color = Color(0, 1, 0, 0.2)

[node name="Audio" type="Node2D" parent="."]

[node name="WordAudio" type="AudioStreamPlayer" parent="Audio"]
volume_db = -3.0

[node name="CorrectSound" type="AudioStreamPlayer" parent="Audio"]
volume_db = -5.0

[node name="WrongSound" type="AudioStreamPlayer" parent="Audio"]
volume_db = -5.0

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="Audio"]
volume_db = -15.0
autoplay = true

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="pressed" from="UI/WordDisplayPanel/PlayWordButton" to="." method="_on_play_word_button_pressed"]
[connection signal="pressed" from="UI/NavButtons/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="UI/NavButtons/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="area_entered" from="MixingDropZone" to="." method="_on_mixing_drop_zone_area_entered"]
